cmd/result.txt
=== executed: 5b22987a4ad96f1cca40c4a21a2a7cd692aaca38
=== started:  2026-06-16T19:10:17Z
=== exit:     1
=== timeout:  90s
===
=== fetching claude/live-state for backup ===
=== restoring trade_history.json from live-state snapshot ===
size: 191375 bytes
count: 297
=== restoring signal_log.json from live-state snapshot ===
size: 236715 bytes
=== restart container so trade_history is reloaded ===
trading-bot-trading-bot-1
=== wait for /health ===
ready after 3s
=== verify trade history loaded ===
=== check via API ===
  File "<string>", line 4
    print(f"total_trades: {d.get(\"total_trades\")}")
                                  ^
SyntaxError: unexpected character after line continuation character
Error in sys.excepthook:
Traceback (most recent call last):
  File "/usr/lib/python3/dist-packages/apport_python_hook.py", line 228, in partial_apport_excepthook
    return apport_excepthook(binary, exc_type, exc_obj, exc_tb)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3/dist-packages/apport_python_hook.py", line 114, in apport_excepthook
    report["ExecutableTimestamp"] = str(int(os.stat(binary).st_mtime))
                                            ^^^^^^^^^^^^^^^
FileNotFoundError: [Errno 2] No such file or directory: '/opt/trading-bot/-c'

Original exception was:
  File "<string>", line 4
    print(f"total_trades: {d.get(\"total_trades\")}")
                                  ^
SyntaxError: unexpected character after line continuation character
